<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:transitionName="@string/text_transition_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin"
        android:text="@string/label_title" />

    <ImageView
        android:id="@+id/main_image"
        android:transitionName="@string/image_transition_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/city_placeholder" />

</LinearLayout>